change website name

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Dongdong Liu&#39;s Website">
+  <meta name="description" content="Legged Group @ NYU">
 
   
   <link rel="alternate" hreflang="en-us" href="https://nyu-legged-group.github.io/404.html">
@@ -282,7 +282,7 @@
   <meta property="og:site_name" content="Legged Group @ NYU">
   <meta property="og:url" content="https://nyu-legged-group.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Legged Group @ NYU">
-  <meta property="og:description" content="Dongdong Liu&#39;s Website"><meta property="og:image" content="https://nyu-legged-group.github.io/images/icon_huf8e5336a0055efa597b4269d2766a471_62922_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Legged Group @ NYU"><meta property="og:image" content="https://nyu-legged-group.github.io/images/icon_huf8e5336a0055efa597b4269d2766a471_62922_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://nyu-legged-group.github.io/images/icon_huf8e5336a0055efa597b4269d2766a471_62922_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
