--- a/people/index.html
+++ b/people/index.html
@@ -654,7 +654,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p><img src="/people/people.jpeg" alt="your image"></p>
+      <p><img src="/people/people.jpg" alt="your image"></p>
 <!-- * Dongdong(Jack) Liu
 * Hoon Jeong
 * Aoxue Wei
