--- a/index.html
+++ b/index.html
@@ -682,7 +682,9 @@
     <h2 id="welcome-to-the-legged-group--nyu">Welcome to the Legged Group @ NYU!</h2>
 <p>We are enthusiasts for legged robots at <a href="http://mechatronics.engineering.nyu.edu" target="_blank">Mechatronics, Controls and Robotics Laboratory</a> in <a href="https://www.nyu.edu" target="_blank">New York University</a>. Our research focuses on developing novel control algorithms for achieving extremely agile and robust locomotion on dynamic robotic systems. Our approach lies at the intersection of nonlinear control, trajectory optimization, and machine learning.</p>
 <h2 id="open-positions">Open Positions</h2>
-<p>We are constantly looking for self-motivated, enthusiastic students with interests and backgrounds that are well aligned with our research. Potential research topics include control, optimization, planning, and reinforcement learning for legged robots. Please contact ddliu (at) nyu (dot) edu by attaching your CV if you are interested to join us.</p>
+<p>No position is available before October 2022. Feel free to reach ddliu (at) nyu (dot) edu for more opportunities.</p>
+<!-- Currently we don't hire new students or researchers, but you are free to contact ddliu (at) nyu (dot) edu if you are interested in collaboration. -->
+<!-- We are constantly looking for self-motivated, enthusiastic students with interests and backgrounds that are well aligned with our research. Potential research topics include control, optimization, planning, and reinforcement learning for legged robots. Please contact ddliu (at) nyu (dot) edu by attaching your CV if you are interested to join us. -->
 
   </div>
 
